# Game_engine

./: .gitignore  CMakeLists.txt  Makefile  RAMBLING.md  README.md  ROADMAP.md  compile_commands.json  game.c
editor/: main.c  main.cpp
game/: main.c  main.cpp  main.hpp
include/: dynamic_array.h  engine.h  engine.hpp  librg.h  prototype.h  prototype.hpp  queue.h  sparse_octree.h  sparse_voxel_octree.h  sparse_voxel_octree.hpp
include/data_type/: sparse_octree.h
include/engine/: core.h  entity.h  gui.h  render.h  thread.h
include/ext/: Frustum.h
include/glad/: glad.h
include/haven/: haven_core.h  haven_physic.h  haven_render.h  haven_time.h  haven_type.h
include/interface/: entity.h  haven_alloc.h  haven_core.h  haven_gl.h  haven_io.h  haven_item.h  haven_math.h  haven_physic.h  haven_thread.h
include/prototype/: core.h  physic.h  render.h
lib/: cr.h  enet.h  librg.h  raygui.h  rlights.h  zpl.h
lib/glad/: glad.h
main/: editor.c  game.c  server.c  unitest.c
server/: main.c  main.cpp
shader/: cubemap.fs  cubemap.vs  defered.fs  gbuffer.fs  pbr.fs  pbr.vs  postprocess.fs  sobel.fs  vox.fs  vox.vs  vox_solid.fs  vox_solid.vs
source/: 3drender.cpp  editor.c  engine.c  engine.cpp  engine.h  file.cpp  glad.c  input.c  input.cpp  item.cpp  lexer.cpp  logger.c  main.c  marketplace.cpp  modding.c  networking.cpp  physic.c  physic.cpp  player_account.c  player_account.cpp  procedural.c  prototype.h  render.c  render.cpp  render_pipeline.cpp  terrain.cpp  thread.c  ui.c  ui.cpp  voxel.c  voxel.cpp  world.c  world.cpp
source/audio/: music_mgr.c  sound_mgr.c
source/client/: audio.h  debug.c  deferred.c  game.c  game.h  gui.c  gui.h  loading_screen.c  main.c  music_mgr.c  render.h  render_impl.h  shader.c  start_menu.c
source/core/: alloc_impl.h  allocator.c  dynamic_array.c  file.c  flowfield.c  gl.c  gl_impl.h  input.c  io.c  io_impl.h  octree.c  queue.c  thread.c  time.c  utils.c  vk_impl.h
source/editor/: main.c
source/engine/: allocator.c  allocator.h  entity.c  entity.h  entity_impl.h  glad.c  gui.c  item.h  item_impl.h  physic.c  type.h  (+8 more)
unitest/: unitest.c
zhidden/: curernt_chat_recap.md
(+105 files in other folders)
